kubernetes/kubernetes-tutorial-daemonset.yaml
apiVersion: apps/v1beta2
kind: DaemonSet
metadata:
  name: kubernetes-tutorial-daemonset
spec:
  selector:
    matchLabels:
      app: ssd-monitor
  template:
    metadata:
      labels:
        app: ssd-monitor
    spec:
      nodeSelector:
        disk: ssd
      containers:
        - name: main
          image: luksa/ssd-monitor
