kubernetes/kubernetes-tutorial-gitrepo-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepo-volume-pod
spec:
  containers:
  - image: nginx:alpine             
    name: web-server                     
    volumeMounts:                        
    - name: html                         
      mountPath: /usr/share/nginx/html   
      readOnly: true                     
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:                               
  - name: html
    gitRepo: 
      repository: https://github.com/gautam-borkar/tutorial-website.git
      revision: master
      directory: .
