kubernetes/kubernetes-tutorial-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubernetes-liveness
spec:
  containers:
  - image: gautamborkar/kubernetes-tutorial-unhealthy
    name: kubernetes-tutorial-unhealthy
    ports:
    - containerPort: 8080
      protocol: TCP
    livenessProbe:
      httpGet:
        path: /
        port: 8080
