kubernetes/kubernetes-tutorial-yaml-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubernetes-tutorial-yaml-node-selector
spec:
  nodeSelector:
    minikube: "true"
  containers:
  - image: gautamborkar/kubernetes-tutorial
    name: kubernetes-tutorial
    ports:
    - containerPort: 8080
      protocol: TCP
