kubernetes/kubernetes-tutorial-yaml.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubernetes-tutorial-yaml
spec:
  containers:
  - image: gautamborkar/kubernetes-tutorial
    name: kubernetes-tutorial
    ports:
    - containerPort: 8080
      protocol: TCP
