kubernetes/kubernetes-tutorial-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-external-service
spec:
  ports:
    - port: 80
