kubernetes/kubernetes-tutorial-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-headless
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubernetes-tutorial-replicaset
