kubernetes/kubernetes-tutorial-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubernetes-tutorial-replicaset
