kubernetes/kubernetes-tutorial-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-node-port
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
  selector:
    app: kubernetes-tutorial-replicaset
