kubernetes/kubernetes-tutorial-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-service
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubernetes-tutorial-replicaset
