kubernetes/kubernetes-tutorial-ingress-multiple-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-tutorial-ingress
spec:
  rules: 
    - host: kubernetes-tutorial-ingress.example.com
      http:
        paths:
          - path: /kubernetes-tutorial
            backend:
              serviceName: kubernetes-tutorial-node-port
              servicePort: 80
    - host: foo-bar.example.com
      http:
        paths:
          - path: /foo
            backend:
              serviceName: bar
              servicePort: 80
