kubernetes/kubernetes-tutorial-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-tutorial-ingress
spec:
  rules: 
    - host: kubernetes-tutorial-ingress.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-tutorial-node-port
              servicePort: 30123
